--- a/dashboard/templates/admin/admin_sensorType_list.html
+++ b/dashboard/templates/admin/admin_sensorType_list.html
@@ -91,7 +91,7 @@
   $(function () {
     $('#table_sensor').DataTable({
       "paging": false,
-      "lengthChange": fal∫se,
+      "lengthChange": false,
       "searching": false,
       "ordering": false,
       "info": false,
