--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -306,7 +306,7 @@
           <ul class="treeview-menu" style="display: none;">
             <li><a href="{% url 'enterprise-client:enterprise-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Clientes</span></a></li>
             <li><a href="{% url 'enterprise-client:client-list' %}"><i class="fa fa-laptop"></i> <span>Lista de Usuarios</span></a></li>
-            <li><a href="{% url 'enterprise-client:client-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Cliente</span></a></li>
+            <li><a href="{% url 'enterprise-client:client-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Usuario</span></a></li>
             <li><a href="{% url 'enterprise-client:enterprise-add' %}"><i class="fa fa-laptop"></i> <span>Agregar Cliente</span></a></li>
           </ul>
         </li>
