Front -  WORKERS TEST

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -40,7 +40,7 @@
       <div class="box box-info">
         <div class="box-header with-border">
           <h3 class="box-title">
-            Ver otros Proyectos
+            Ver otras Instalaciónes
           </h3>
           <div class="box-tools pull-right">
             <button class="btn btn-box-tool" data-widget="collapse">
