FRONT - WORKERS TEST - 2

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -238,6 +238,8 @@
       $("#canChangeProject").hide();
     }
 
+    console.log("{{ holo }}");
+
     //canChangeProject
 
     actualProject = {{ project_list.first.id }} ;
